--- a/participantes/luucaspole-crystal/docker-compose.yaml
+++ b/participantes/luucaspole-crystal/docker-compose.yaml
@@ -88,6 +88,12 @@ services:
     depends_on:
       - app1
       - app2
+      - app3
+      - consumer
+      - consumer2
+      - consumer3
+      - consumer4
+      - consumer5
     ports:
       - "9999:9999"
     ulimits:
